--- a/GameTicTacTo/index.html
+++ b/GameTicTacTo/index.html
@@ -19,6 +19,8 @@
         <div class="cell" data-index="7"></div>
         <div class="cell" data-index="8"></div>
     </div>
+    <br>
+    <button type="reset">Reset</button>
     <script src="script.js"></script>
 </body>
 </html>
